# USBtoI2C

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  nullmodem_ttyS10-S11.sh
App/: application.c  application.cpp  application.h  cli_handle.cpp  cli_handle.h  config.h  errors.h  hw_i2c.h  io_bus.cpp  io_bus.hpp  main.cpp  proto.h  retarget.h  sys_gpio.cpp  sys_gpio.hpp  system.cpp  system.hpp
App/debug/: log_libs.c  log_libs.h  ses_retarget.c  ses_retarget.h
App/io/: io.h  io_bus.cpp  io_bus.hpp  io_i2c.h
App/io/stm32/: io.c  io_i2c.c
App/platform/core407/: core407.cpp  core407.hpp  core407bus.cpp  core407bus.hpp  core407io.cpp  core407io.hpp
App/platform/green_pill/: gp_bus.cpp  gp_bus.hpp  gp_io.cpp  gp_io.hpp  green_pill.cpp  green_pill.hpp
App/platform/stm32common/: retarget.c
App/retarget/: ses_retarget.c
App/system/: sys_common.h  system.cpp  system.hpp
App/system/stm32/: sys_common.c
CubeMX/STM32F401CxUx/: STM32F401CxUx.ioc
CubeMX/STM32F401CxUx/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
CubeMX/STM32F401CxUx/Core/Src/: gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
CubeMX/STM32F401CxUx/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
CubeMX/STM32F407VE/: STM32F407VE.ioc
CubeMX/STM32F407VE/Core/Inc/: stm32f4xx_hal_conf.h
CubeMX/STM32F407VE/Core/Src/: gpio.c  main.c
SES/: USBtoI2C.emProject
config/: CMakeLists.txt  common.cmake  desktop.cmake  get_build_marks.c.in  mcu.cmake  utils.cmake
targets/desktop/: CMakeLists.txt  main.cpp
utils/: console.py  flash.ps1  flash_debug_command.jlink
(+1 files in other folders)
